After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659920 - Missing setter for read/write property 'closed' of GIOStream
Missing setter for read/write property 'closed' of GIOStream
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-09-23 08:12 UTC by Eduardo Lima Mitev
Modified: 2011-09-23 12:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Eduardo Lima Mitev 2011-09-23 08:12:57 UTC
'closed' property of GIOStream is defined as readwrite, however setting it is not implemented in set_property().

If the property was changed to just 'readable', it should be updated in property definition. Otherwise its setter should be implemented in set_property().

Or am I missing something here?
Comment 1 Dan Winship 2011-09-23 12:55:22 UTC
It shouldn't have been marked writable. to close a stream you use
g_io_stream_close/close_async().

fixed in master