giostream: "closed" property should not be marked writable

https://bugzilla.gnome.org/show_bug.cgi?id=659920